--- a/e3db/build.gradle
+++ b/e3db/build.gradle
@@ -14,30 +14,7 @@ dependencies {
     implementation project(':e3db-crypto-interface')
 }
 
-sourceCompatibility = "1.7"
-targetCompatibility = "1.7"
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
-//assert hasProperty('java7Home') : "Set the property 'java7Home' in your your gradle.properties pointing to a Java 7 installation"
-if(hasProperty('java7home')) {
-    def javaExecutablesPath = new File(java7Home, 'bin')
-    def javaExecutables = [:].withDefault { execName ->
-        def executable = new File(javaExecutablesPath, execName + ".exe")
-        assert executable.exists() : "There is no ${execName} executable in ${javaExecutablesPath}"
-        executable
-    }
-    tasks.withType(AbstractCompile) {
-        options.with {
-            fork = true
-            forkOptions.javaHome = file(java7Home)
-        }
-    }
-    tasks.withType(Javadoc) {
-        executable = javaExecutables.javadoc
-    }
-    tasks.withType(Test) {
-        executable = javaExecutables.java
-    }
-    tasks.withType(JavaExec) {
-        executable = javaExecutables.java
-    }
-}
+setJava7(this.project)
