--- a/e3dbtest/build.gradle
+++ b/e3dbtest/build.gradle
@@ -4,7 +4,6 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.1"
 
-
     defaultConfig {
         applicationId "com.tozny.e3dbtest"
         minSdkVersion 19
@@ -28,9 +27,11 @@ dependencies {
 
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+
+    androidTestCompile 'com.android.support.test:runner:1.0.1'
+    androidTestCompile 'com.android.support.test:rules:1.0.1'
+    androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+
     compile project(path: ':e3db')
     compile project(path: ':e3db-crypto-android')
     compile 'commons-io:commons-io:2.5'
