--- a/e3db/build.gradle
+++ b/e3db/build.gradle
@@ -18,3 +18,13 @@ sourceCompatibility = 1.7
 targetCompatibility = 1.7
 
 setJava7(this.project)
+
+evaluationDependsOn(':publish')
+
+javadoc {
+    source = files(["${project(":e3db").projectDir}/src/main/java",
+                    "${project(":e3db-crypto-interface").projectDir}/src/main/java"])
+    title = "E3DB API Client"
+    destinationDir = file("${rootDir}/docs/${project(":publish").ext.version}")
+    options.noQualifiers "java.lang", "java.util"
+}
