--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.0-beta5'
+        classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.0"
     }
 }
 
