--- a/e3dbtest/build.gradle
+++ b/e3dbtest/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: "de.mannodermaus.android-junit5"
 
 android {
     compileSdkVersion 26
@@ -22,15 +23,23 @@ android {
     }
 }
 
+ext.junitPlatformVersion = '1.0.0'
+ext.junitJupiterVersion  = '5.0.0'
+ext.log4jVersion         = '2.6.2'
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    compile project(path: ':e3db')
+    compile 'commons-io:commons-io:2.5'
+
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestCompile 'com.android.support.test:rules:1.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestCompile project(path: ':e3db-crypto-android')
 
     // To match version in e3db library.
     implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
@@ -40,4 +49,8 @@ dependencies {
     compile project(path: ':e3db')
     compile project(path: ':e3db-crypto-android')
     compile 'commons-io:commons-io:2.5'
+
+    testImplementation junit5()
+    testCompileOnly "de.mannodermaus.gradle.plugins:android-junit5-embedded-runtime:1.0.0"
+    testCompile project(path: ':e3db-crypto-plain')
 }
