--- a/e3dbtest/build.gradle
+++ b/e3dbtest/build.gradle
@@ -32,6 +32,11 @@ dependencies {
     androidTestCompile 'com.android.support.test:rules:1.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
 
+    // To match version in e3db library.
+    implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
+    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
+
     compile project(path: ':e3db')
     compile project(path: ':e3db-crypto-android')
     compile 'commons-io:commons-io:2.5'
