--- a/build.gradle
+++ b/build.gradle
@@ -9,10 +9,11 @@ buildscript {
         maven { url "https://maven.tozny.com/repo" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-beta6'
+        classpath 'com.android.tools.build:gradle:3.0.0'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.0"
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.7.3'
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
+        classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
     }
 }
 
