--- a/publish/android/build.gradle
+++ b/publish/android/build.gradle
@@ -69,6 +69,15 @@ publishing {
       }
     }
   }
+  repositories {
+      maven {
+          url "${System.getenv('REPO_URL')}"
+          credentials(AwsCredentials) {
+              accessKey "${System.getenv('AWS_KEY')}"
+              secretKey "${System.getenv('AWS_SECRET')}"
+          }
+      }
+  }
 }
 
 dependencies {
