Android & Plain Java Benchmarks; Method Count Report
Implemented benchmarks measuring crypto operations on Android
and using plain Java (server/desktop environment).

* Android benchmarks in `android-benchmark`. Run via Android
  Studio or `connectedDeviceTest` gradle command.
* Plain java benchmarks in `plain-benchmark`. Implemented using
  JMH; run via an executable JAR. For details, see `DEVELOPMENT.md`.
* Updated build to report method counts; added some benchmarks.

--- a/settings.gradle
+++ b/settings.gradle
@@ -8,4 +8,6 @@ include (':e3db',
         ':publish',
         ':publish:android',
         ':publish:plain',
-        ':plaintest' )
+        ':plaintest',
+        ':android-benchmark',
+        ':plain-benchmark')
