--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -37,6 +37,10 @@ dependencies {
     androidTestCompile project(path: ':e3db')
     androidTestCompile project(path: ':e3db-crypto-interface')
     androidTestCompile project(path: ':e3db-crypto-android')
+
+    compile project(path: ':e3db')
+    compile project(path: ':e3db-crypto-interface')
+    compile project(path: ':e3db-crypto-android')
 }
 
 tasks.withType(Test) {
