--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -12,6 +12,7 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
+        vectorDrawables.useSupportLibrary = true
     }
     buildTypes {
         release {
@@ -27,6 +28,9 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
 
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
     androidTestCompile 'com.android.support.test:runner:1.0.1'
     androidTestCompile 'com.android.support.test:rules:1.0.1'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:3.0.1'
@@ -46,6 +50,9 @@ dependencies {
 tasks.withType(Test) {
     testLogging {
         showStackTraces = true
-        exceptionFormat="full"
+        exceptionFormat = "full"
     }
 }
+
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
