--- a/androidtest/src/main/AndroidManifest.xml
+++ b/androidtest/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.USE_FINGERPRINT"/>
+
 
     <application
             android:icon="@mipmap/ic_launcher"
