--- a/android-benchmark/build.gradle
+++ b/android-benchmark/build.gradle
@@ -17,9 +17,9 @@ android {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.2.30"
-    androidTestCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support.test:rules:0.4.1'
-    androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.1'
+    androidTestImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:rules:0.4.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestImplementation 'dk.ilios:spanner:0.6.0'
     androidTestImplementation('com.tozny.e3db:e3db-client-android:3.0.0-SNAPSHOT@aar') {
         transitive = true
