--- a/publish/plain/build.gradle
+++ b/publish/plain/build.gradle
@@ -12,10 +12,18 @@ sourceSets {
 
 evaluationDependsOn(':publish')
 
+task sourceJar(type: Jar) {
+  from sourceSets.main.allJava
+}
+
 publishing {
   publications {
     maven(MavenPublication) {
       from components.java
+
+      artifact sourceJar {
+        classifier "sources"
+      }
 
       groupId project(":publish").ext.groupId
       artifactId 'e3db-client-plain'
@@ -34,11 +42,11 @@ publishing {
 }
   
 dependencies {
-  compile files("${project(":e3db").projectDir}/compileLibs/android-4.1.1.4.jar")
-  compile 'com.squareup.retrofit2:retrofit:2.3.0'
-  compile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
-  compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
-  compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
-  compile 'com.squareup.okio:okio:1.13.0'
-  compile 'org.abstractj.kalium:kalium:0.7.0'
+  implementation files("${project(":e3db").projectDir}/compileLibs/android-4.1.1.4.jar")
+  implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+  implementation 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
+  implementation 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
+  implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
+  implementation 'com.squareup.okio:okio:1.13.0'
+  implementation 'org.abstractj.kalium:kalium:0.7.0'
 }
