--- a/stubs/e3db-crypto-stub-android/build.gradle
+++ b/stubs/e3db-crypto-stub-android/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'java'
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly project(':e3db-crypto-interface')
 }
 
