--- a/android-benchmark/build.gradle
+++ b/android-benchmark/build.gradle
@@ -21,7 +21,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test:rules:0.4.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.1'
     androidTestImplementation 'dk.ilios:spanner:0.6.0'
-    androidTestImplementation('com.tozny.e3db:e3db-client-android:3.0.0-SNAPSHOT@aar') {
-        transitive = true
-    }
+    androidTestImplementation project(path: ':e3db')
+    androidTestImplementation project(path: ':e3db-crypto-interface')
+    androidTestImplementation project(path: ':e3db-crypto-android')
 }
