Encoding & Decoding Local Records
Added built-in support for encoding and decoding encrypted records, so
they can easily be persisted to storage.

* Added `EncryptedRecord` class (which implements `Record`) that has
methods for encoding and decoding.
* Updated `Client#encryptRecord` and `Client#encryptExisting` to return
`EncryptedRecord` instances, rather than the base `Record` interface.
* Updated `decryptExisting` to return a `LocalRecord` instance for concreteness.
* Fixed a bug where local encryption & decryption did noit require that the client have a signing
key.
* Refactored testing so that common tests (read, write, etc.)
are executed on both Android and plain Java, ensuring coverage in
both environments.
* Updated documentation to explain how to run tests on both platforms.

--- a/androidtest/build.gradle
+++ b/androidtest/build.gradle
@@ -20,6 +20,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    sourceSets.androidTest.java {
+        srcDirs = ['src/androidTest/java', "${project(":common-test").projectDir}/src/test/java"]
+    }
 }
 
 dependencies {
