--- a/settings.gradle
+++ b/settings.gradle
@@ -10,4 +10,6 @@ include (':e3db',
         ':publish:plain',
         ':plaintest',
         ':android-benchmark',
-        ':plain-benchmark')
+        ':plain-benchmark',
+        ':common-test')
+
