--- a/common-test/build.gradle
+++ b/common-test/build.gradle
@@ -18,28 +18,35 @@
  *
  */
 
-package com.tozny.e3db;
+apply plugin: 'java-library'
 
-import java.util.Map;
-
-/**
- * An individual, decrypted E3DB record.
- */
-public interface Record extends Signable {
-  /**
-   * Information about the record.
-   *
-   * Includes items such as writer ({@link RecordMeta#writerId()}),
-   * creation date ({@link RecordMeta#created()}, type ({@link RecordMeta#type}), etc.
-   *
-   * @return meta.
-   */
-  RecordMeta meta();
-
-  /**
-   * Decrypted field names and values.
-   *
-   * @return data.
-   */
-  Map<String, String> data();
+compileTestJava {
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+  options.compilerArgs += '-parameters'
 }
+
+dependencies {
+  testImplementation("junit:junit:[4,)")
+  implementation project(path: ':e3db')
+  implementation project(path: ':e3db-crypto-interface')
+  compileOnly project(":e3db-crypto-stub-plain")
+  compileOnly project(":e3db-crypto-stub-android")
+  testImplementation project(path: ':e3db')
+  testImplementation project(path: ':e3db-crypto-interface')
+  testCompileOnly project(":e3db-crypto-stub-plain")
+  testCompileOnly project(":e3db-crypto-stub-android")
+}
+
+test {
+  // always re-run tests
+  outputs.upToDateWhen { false }
+  testLogging {
+    exceptionFormat "full"
+    showStackTraces true
+    showStandardStreams true
+  }
+}
+
+sourceCompatibility = "1.7"
+targetCompatibility = "1.7"
