--- a/plaintest/build.gradle
+++ b/plaintest/build.gradle
@@ -1,29 +1,54 @@
+/*
+ * TOZNY NON-COMMERCIAL LICENSE
+ *
+ * Tozny dual licenses this product. For commercial use, please contact
+ * info@tozny.com. For non-commercial use, the contents of this file are
+ * subject to the TOZNY NON-COMMERCIAL LICENSE (the "License") which
+ * permits use of the software only by government agencies, schools,
+ * universities, non-profit organizations or individuals on projects that
+ * do not receive external funding other than government research grants
+ * and contracts.  Any other use requires a commercial license. You may
+ * not use this file except in compliance with the License. You may obtain
+ * a copy of the License at https://tozny.com/legal/non-commercial-license.
+ * Software distributed under the License is distributed on an "AS IS"
+ * basis, WITHOUT WARRANTY OF ANY KIND, either express or implied. See the
+ * License for the specific language governing rights and limitations under
+ * the License. Portions of the software are Copyright (c) TOZNY LLC, 2018.
+ * All rights reserved.
+ *
+ */
+
 apply plugin: 'java'
 
 compileTestJava {
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
-    options.compilerArgs += '-parameters'
+  sourceCompatibility = 1.8
+  targetCompatibility = 1.8
+  options.compilerArgs += '-parameters'
+}
+
+sourceSets.test.java {
+  srcDirs = ["src/test/java", "${project(":common-test").projectDir}/src/test/java"]
 }
 
 dependencies {
-    testCompile("junit:junit:[4,)")
-    testCompile project(path: ':e3db')
-    testCompile project(path: ':e3db-crypto-interface')
-    testCompile(project(path: ':e3db-crypto-plain'))
-    testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
-    testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
-    testCompile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
+  testImplementation project(":common-test")
+  testCompile("junit:junit:[4,)")
+  testCompile project(path: ':e3db')
+  testCompile project(path: ':e3db-crypto-interface')
+  testCompile(project(path: ':e3db-crypto-plain'))
+  testCompile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
+  testCompile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
+  testCompile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
 }
 
 test {
-    // always re-run tests
-    outputs.upToDateWhen { false }
-    testLogging {
-        exceptionFormat "full"
-        showStackTraces true
-        showStandardStreams true
-    }
+  // always re-run tests
+  outputs.upToDateWhen { false }
+  testLogging {
+    exceptionFormat "full"
+    showStackTraces true
+    showStandardStreams true
+  }
 }
 
 sourceCompatibility = "1.7"
