--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,9 @@ allprojects {
         mavenCentral()
         mavenLocal()
         maven { url 'https://jitpack.io' }
+        maven {
+            url  "https://dl.bintray.com/terl/lazysodium-maven"
+        }
     }
 }
 
