--- a/publish/plain/build.gradle
+++ b/publish/plain/build.gradle
@@ -71,5 +71,5 @@ dependencies {
   compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
   compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
   compile 'com.squareup.okio:okio:1.13.0'
-  compile 'org.abstractj.kalium:kalium:0.7.0'
+  implementation "com.goterl.lazycode:lazysodium-java:2.5.0"
 }
