--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
         maven { url "https://maven.tozny.com/repo" }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.0-rc01'
+        classpath 'com.android.tools.build:gradle:3.1.0'
         classpath "de.mannodermaus.gradle.plugins:android-junit5:1.0.0"
         classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.8.2'
         classpath 'com.github.jengelman.gradle.plugins:shadow:2.0.1'
