Updates based on review.

--- a/e3db-crypto-plain/build.gradle
+++ b/e3db-crypto-plain/build.gradle
@@ -23,7 +23,7 @@ apply plugin: 'java'
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compileOnly project(':e3db-crypto-interface')
-    compile "com.goterl.lazycode:lazysodium-java:2.5.0"
+    compile 'com.goterl.lazycode:lazysodium-java:2.5.0'
     compile 'net.java.dev.jna:jna:4.5.1@aar'
 }
 
