--- a/e3db-crypto-android/build.gradle
+++ b/e3db-crypto-android/build.gradle
@@ -51,8 +51,8 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.0'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
     compileOnly project(':e3db-crypto-interface')
-    api 'com.goterl.lazycode:lazysodium-android:2.5.0@aar'
-    api 'net.java.dev.jna:jna:4.5.1@aar'
+    implementation 'com.goterl.lazycode:lazysodium-android:2.5.0@aar'
+    implementation 'net.java.dev.jna:jna:4.5.1@aar'
     implementation 'com.android.support:support-annotations:27.1.0'
     implementation 'com.android.support:support-compat:26.0.1'
     implementation 'com.android.support:support-core-utils:26.0.1'
