--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ buildscript {
         classpath 'org.junit.platform:junit-platform-gradle-plugin:1.0.1'
         classpath 'com.android.tools.build:gradle:3.0.0-alpha4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.2.30"
+        classpath 'digital.wup:android-maven-publish:3.2.0'
     }
 }
 
