--- a/publish/plain/build.gradle
+++ b/publish/plain/build.gradle
@@ -66,13 +66,13 @@ publishing {
 }
   
 dependencies {
-  compile files("${project(":e3db").projectDir}/compileLibs/android-4.1.1.4.jar")
-  compile 'com.squareup.retrofit2:retrofit:2.4.0'
-  compile 'com.fasterxml.jackson.core:jackson-core:2.9.0.pr4'
-  compile 'com.fasterxml.jackson.core:jackson-annotations:2.9.0.pr4'
-  compile 'com.fasterxml.jackson.core:jackson-databind:2.9.0.pr4'
-  compile "com.goterl.lazycode:lazysodium-java:2.5.0"
-  compile 'net.java.dev.jna:jna:4.5.1'
-  compile 'com.squareup.okhttp3:okhttp:3.10.0'
-//  compile 'com.squareup.okhttp3:logging-interceptor:3.10.0'
+  compile project(":e3db-crypto-plain").configurations.compile.dependencies.matching { dep ->
+    // exclude project dependencies - only include external, maven dependencies
+    ExternalModuleDependency.class.isAssignableFrom(dep.class)
+  }
+  compile project(":e3db").configurations.compile.dependencies.matching { dep ->
+    // exclude project dependencies - only include external, maven dependencies
+    ExternalModuleDependency.class.isAssignableFrom(dep.class)
+  }
+  compileOnly project(":e3db").configurations.compileOnly.dependencies
 }
