WIP submodule & cipher suite update.

--- a/settings.gradle
+++ b/settings.gradle
@@ -33,3 +33,9 @@ include (':e3db',
         ':plain-benchmark',
         ':common-test')
 
+include(':e3db-fips',
+    ':e3db-fips:e3db-crypto-fips-android',
+    ':e3db-fips:publish:android',
+    ':e3db-fips:e3db-crypto-fips-plain',
+    ':e3db-fips:publish:plain')
+
