--- a/e3db-crypto-android/src/main/AndroidManifest.xml
+++ b/e3db-crypto-android/src/main/AndroidManifest.xml
@@ -19,4 +19,4 @@
   -->
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.tozny.e3dbandroidcrypto"/>
+          package="com.tozny.e3db"/>
